--- a/styles.css
+++ b/styles.css
@@ -213,10 +213,10 @@ th{
       text-align: center;
     }
     .main-flex{
-      display: flex;
-      flex-direction: column;
-      width: 79%;
-      margin-right: 0;
+      display: grid;
+      grid-template-columns: 1fr;
+      margin:auto;
+      margin-left: 270px;
     }
     .child-flex{
       max-width: 100%;
@@ -234,7 +234,7 @@ th{
       margin-left: 2px;
     }
     .table-wrapper{
-      max-width: 100%;
+      max-width: 41%;
       margin-left: 0;
       margin: 0;
     }
